Basic UI finished. Added the insert new clothes activity

--- a/app/src/main/res/layout/activity_display_match.xml
+++ b/app/src/main/res/layout/activity_display_match.xml
@@ -7,7 +7,24 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.example.huangm26.fashionchaser.WeatherActivity">
+    tools:context="com.example.huangm26.fashionchaser.DisplayMatch">
+
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/displayPicture"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true" />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/cameraButton"
+        android:background="@drawable/camerabutton"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:layout_below="@+id/displayPicture"
+        android:layout_marginTop="250dp" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -15,8 +32,10 @@
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:text="@string/Temperature"
         android:id="@+id/temperatureTextView"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true" />
+        android:layout_centerHorizontal="true"
+        android:layout_centerVertical="true"
+        android:layout_below="@+id/cameraButton"
+        android:layout_marginTop="50dp"/>
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -33,4 +52,8 @@
         android:id="@+id/locationTextView"
         android:layout_below="@+id/conditionTextView"
         android:layout_centerHorizontal="true" />
+
+
+
+
 </RelativeLayout>
