Basic UI finished. Added the insert new clothes activity

--- a/app/src/main/res/layout/activity_display_match.xml
+++ b/app/src/main/res/layout/activity_display_match.xml
@@ -20,7 +20,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/cameraButton"
-        android:background="@drawable/camerabutton"
+        android:background="@drawable/camera"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
         android:layout_below="@+id/displayPicture"
