--- a/app/src/main/res/layout/activity_insert_new_clothes.xml
+++ b/app/src/main/res/layout/activity_insert_new_clothes.xml
@@ -18,7 +18,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/cameraButton"
-        android:background="@drawable/camerabutton"
+        android:background="@drawable/camera"
         android:layout_centerHorizontal="true"
         android:layout_below="@+id/displayPicture"
          />
