--- a/app/src/main/res/layout/activity_insert_new_clothes.xml
+++ b/app/src/main/res/layout/activity_insert_new_clothes.xml
@@ -8,8 +8,8 @@
     tools:context="com.example.huangm26.fashionchaser.InsertNewClothes"
     >
     <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="250dp"
+        android:layout_height="250dp"
         android:id="@+id/displayPicture"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true" />
@@ -49,4 +49,30 @@
         android:layout_centerHorizontal="true"
         android:layout_below="@+id/first_spinner"
         />
+
+    <Spinner
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/third_spinner"
+        android:layout_centerHorizontal="true"
+        android:layout_below="@+id/second_spinner"
+        />
+
+
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Insert New Item"
+        android:id="@+id/insertNew"
+        android:layout_below="@+id/third_spinner"
+        android:layout_alignParentStart="true" />
+
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Exit"
+        android:id="@+id/exit"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentStart="true" />
+
 </RelativeLayout>
