--- a/app/src/main/res/layout/activity_display_match.xml
+++ b/app/src/main/res/layout/activity_display_match.xml
@@ -54,10 +54,19 @@
     <Button
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:text="Display Match"
+        android:id="@+id/display"
+        android:layout_above="@+id/exit"
+        android:layout_alignParentStart="true" />
+
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:text="Exit"
         android:id="@+id/exit"
         android:layout_alignParentBottom="true"
         android:layout_alignParentStart="true" />
+
 
 
 
